# vrun

./: .gitattributes  .gitignore  ABOUT.md  AUTHOR.md  CHANGELOG.md  CLI_QUICK_REFERENCE.md  CLI_USAGE_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUI_USAGE_GUIDE.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  SECURITY.md  dos_plotter_gui.py  example_cli_usage.py  launch_gui.bat  plot_real_dos.py  pyproject.toml  requirements.txt  run_gui.py  setup.py  vasp_dos_cli.py  vasp_dos_plotter.spec
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
RES/IBRION=-1-ISMEAR=-5/1-O-vac/: DOS0
RES/IBRION=-1-ISMEAR=-5/H-bridge/: DOS0
RES/IBRION=-1-ISMEAR=-5/H-terminal/: DOS0
RES/IBRION=-1-ISMEAR=0/1-O-vac/: DOS0
RES/IBRION=-1-ISMEAR=0/H-bridge/: DOS0
RES/IBRION=-1-ISMEAR=0/H-terminal/: DOS0
RES/IBRION=-1-ISMEAR=0/clean/: DOS0
RES/IBRION=2-ISMEAR=-5/clean/: DOS0
RES/IBRION=2-ISMEAR=0/1-O-vac-IBRION=2-ISMEAR=0/: DOS0
RES/IBRION=2-ISMEAR=0/H-bridge-IBRION=2-ISMEAR=0/: DOS0
RES/IBRION=2-ISMEAR=0/H-terminal-IBRION=2-ISMEAR=0/: DOS0
RES/IBRION=2-ISMEAR=0/clean-IBRION=2-ISMEAR=0/: DOS0
vasp_dos_plotter/: __init__.py  gui.py  plotter.py
